Some fixes - added gap to the faq, - added contact to the header

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,10 @@ a {
   font-weight: 700;
 }
 
+.h-contact small{
+  font-size: 11px;
+}
+
 
 
 
@@ -244,12 +248,13 @@ a {
 }
 
 .why-image{
-  background-color: red;
+  /* background-color: red; */
 }
 
 
 .why-image img{
   height: 100%;
+  /* object-fit: cover; */
 }
 
 
